<resources>
    <string name="app_name">Note+</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="all_note">Tất cả</string>
    <string name="favorite">Favorite</string>
    <string name="save">Lưu</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="enter_title">Tiêu đề công việc</string>
    <string name="enter_content">Nội dung</string>
    <string name="search">Tìm kiếm</string>
    <string name="date">01-11-2019</string>
    <string name="cancle">Cancle</string>
    <string name="voice_hint">Speak now</string>
    <string name="not_note">Not results found</string>
    <string name="not">No data!</string>
    <string name="riminder">Timer oclock</string>
    <string name="no_cardetails">Click on the button below to begin creating your reminder!</string>
    <string name="title_activity_add_reminder">Add Reminder</string>
    <string name="title_activity_edit_reminder">Edit Reminder</string>
    <string name="title_activity_licenses">Licenses</string>

    <string name="add_reminder">Reminder</string>
    <string name="details">Details</string>
    <string name="time">Thời gian hẹn</string>
    <string name="repeat">Thời gian lặp lại</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_no">Khoảng thời gian lặp lại</string>
    <string name="repeat_type">Loại lặp lại</string>

    <string name="action_discard_reminder">Discard Reminder</string>
    <string name="action_save_reminder">Save Reminder</string>

    <string name="editor_activity_title_new_reminder">Add Reminder Details</string>
    <string name="editor_activity_title_edit_reminder">Edit Reminder</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this Reminder?</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_reminder_successful">Reminder deleted</string>

    <string name="editor_delete_reminder_failed">Error with deleting reminder</string>

    <string name="editor_insert_reminder_successful">Reminder saved</string>

    <string name="editor_insert_reminder_failed">Error with saving reminder</string>

    <string name="editor_update_reminder_successful">Reminder updated</string>

    <string name="editor_update_reminder_failed">Error with updating reminder</string>
    <string name="default_notification_channel_id">default</string>
    <string name="reminder_title">AlarmReminder</string>

</resources>
