<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/selectableItemBackground"
    tools:context=".view.NoteActivity">

    <include layout="@layout/toolbar_note"/>

    <RelativeLayout
        android:layout_below="@id/layouttoolbar"
        android:orientation="vertical"
        android:id="@+id/note_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:paddingLeft="0dp"
        android:paddingRight="0dp">


        <ScrollView
            android:id="@+id/sv_content_new_note"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:background="@color/color_light"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/layout_1"
                    android:background="@color/color_hint"
                    android:layout_alignParentTop="true"
                    />
                <EditText
                    android:id="@+id/edTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#a89b9999"
                    android:hint="@string/enter_title"
                    android:inputType="text"
                    android:minHeight="@dimen/layout_50"
                    android:lines="1"
                    android:paddingLeft="@dimen/margin_mid"
                    android:paddingRight="@dimen/margin_mid"
                    android:textColor="@android:color/black"
                    android:textCursorDrawable="@drawable/color_cusor"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edNote"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/edTitle"
                    android:background="@color/color_light"
                    android:hint="@string/enter_content"
                    android:inputType="textMultiLine"
                    android:layout_marginLeft="@dimen/margin_mid"
                    android:layout_marginRight="@dimen/margin_mid"
                    android:scrollbars="vertical"
                    android:minHeight="@dimen/layout_50"
                    android:textColor="@android:color/black"
                    android:textCursorDrawable="@drawable/color_cusor" />

                <View
                    android:layout_below="@id/edNote"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/layout_1"
                    android:background="@color/color_hint"
                    android:layout_alignParentTop="true"
                    />

                <RelativeLayout
                    android:layout_below="@id/edNote"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">


                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:clickable="true"
                            android:onClick="setDate"
                            android:id="@+id/date"
                            android:background="?android:attr/selectableItemBackground"
                            android:layout_height="72dp"
                            >

                            <ImageView
                                android:id="@+id/date_icon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_marginLeft="16dp"
                                android:layout_marginRight="32dp"
                                android:src="@drawable/ic_view_day_grey600_24dp"
                                android:layout_centerVertical="true" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_toRightOf="@id/date_icon"
                                android:layout_height="wrap_content">


                                <TextView
                                    android:layout_width="wrap_content"
                                    android:id="@+id/set_date"
                                    android:textSize="15dp"
                                    android:text="11"
                                    android:textColor="@android:color/black"
                                    android:layout_height="wrap_content"/>

                            </LinearLayout>

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:clickable="true"
                            android:onClick="setTime"
                            android:id="@+id/time"
                            android:background="?android:attr/selectableItemBackground"
                            android:layout_height="72dp"
                           >

                            <ImageView
                                android:id="@+id/time_icon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_marginLeft="16dp"
                                android:layout_marginRight="32dp"
                                android:src="@drawable/ic_access_time_grey600_24dp"
                                android:layout_centerVertical="true" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:orientation="vertical"
                                android:layout_centerVertical="true"
                                android:layout_toRightOf="@id/time_icon"
                                android:layout_height="wrap_content">

                                <TextView
                                    android:id="@+id/time_text"
                                    android:textColor="@android:color/black"
                                    android:layout_width="wrap_content"
                                    android:textSize="15dp"
                                    android:layout_height="wrap_content"
                                    android:text="@string/time" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:id="@+id/set_time"
                                    android:textSize="15dp"
                                    android:textColor="@android:color/black"
                                    android:layout_height="wrap_content"/>

                            </LinearLayout>

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:id="@+id/repeat"
                            android:layout_height="72dp">

                            <ImageView
                                android:id="@+id/repeat_icon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_marginLeft="16dp"
                                android:layout_marginRight="32dp"
                                android:src="@drawable/ic_sync_grey600_24dp"
                                android:layout_centerVertical="true" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:orientation="vertical"
                                android:id="@+id/repeat_ll"
                                android:layout_centerVertical="true"
                                android:layout_toRightOf="@id/repeat_icon"
                                android:layout_height="wrap_content">

                                <TextView
                                    android:id="@+id/repeat_text"
                                    android:textColor="@android:color/black"
                                    android:layout_width="wrap_content"
                                    android:textSize="15dp"
                                    android:layout_height="wrap_content"
                                    android:text="@string/repeat" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:id="@+id/set_repeat"
                                    android:textSize="15dp"
                                    android:textColor="@android:color/black"
                                    android:layout_height="wrap_content"/>

                            </LinearLayout>

                            <Switch
                                android:id="@+id/repeat_switch"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_alignParentRight="true"
                                android:layout_marginRight="16dp"
                                android:layout_marginLeft="8dp"
                                android:onClick="onSwitchRepeat"
                                android:checked="true"
                                android:textOn="On"
                                android:textOff="Off"
                                 />

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:id="@+id/RepeatNo"
                            android:clickable="true"
                            android:onClick="setRepeatNo"
                            android:background="?android:attr/selectableItemBackground"
                            android:layout_height="72dp"
                           >

                            <ImageView
                                android:id="@+id/repeat_no_icon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_marginLeft="16dp"
                                android:layout_marginRight="32dp"
                                android:src="@drawable/ic_unfold_more_grey600_24dp"
                                android:layout_centerVertical="true" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_toRightOf="@id/repeat_no_icon"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/repeat_no_text"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/repeat_no"
                                    android:textColor="@android:color/black"
                                    android:textSize="15dp" />

                                <TextView
                                    android:id="@+id/set_repeat_no"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@android:color/black"
                                    android:textSize="15dp" />

                            </LinearLayout>


                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:id="@+id/RepeatType"
                            android:clickable="true"
                            android:onClick="selectRepeatType"
                            android:background="?android:attr/selectableItemBackground"
                            android:layout_height="72dp">

                            <ImageView
                                android:id="@+id/repeat_type_icon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_marginLeft="16dp"
                                android:layout_marginRight="32dp"
                                android:src="@drawable/ic_subject_grey600_24dp"
                                android:layout_centerVertical="true" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:orientation="vertical"
                                android:layout_centerVertical="true"
                                android:layout_toRightOf="@id/repeat_type_icon"
                                android:layout_height="wrap_content">

                                <TextView
                                    android:id="@+id/repeat_type_text"
                                    android:textColor="@android:color/black"
                                    android:layout_width="wrap_content"
                                    android:textSize="15dp"
                                    android:layout_height="wrap_content"
                                    android:text="@string/repeat_type" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:id="@+id/set_repeat_type"
                                    android:textSize="15dp"
                                    android:textColor="@android:color/black"
                                    android:layout_height="wrap_content"/>

                            </LinearLayout>

                        </RelativeLayout>
                    </LinearLayout>

                </RelativeLayout>
            </RelativeLayout>



        </ScrollView>
    </RelativeLayout>
</RelativeLayout>